@startuml 客户管理类图

skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 10
skinparam dpi 96

skinparam class {
    BorderColor #8B4513
    BorderThickness 1.5
    BackgroundColor #FDF5E6
    FontSize 11
    HeaderBackgroundColor #8B4513
    HeaderFontColor #FFFFFF
}

skinparam abstractClass {
    BorderColor #A0522D
    BorderThickness 1.5
    BackgroundColor #FDF8F3
    FontSize 11
    HeaderBackgroundColor #A0522D
    HeaderFontColor #FFFFFF
    FontStyle italic
}

skinparam package {
    BorderThickness 1.5
    BackgroundColor #FDFAF5
    FontStyle bold
    FontSize 12
}

skinparam arrow {
    Color #A0522D
    Thickness 1.2
}

skinparam nodesep 25
skinparam ranksep 30

' ============ 模型层 ============
package "model" #FDF0E0 {
    class Elderly <<客户核心>> {
        - id : String
        - name : String
        - age : int
        - gender : String
        - idCard : String
        - phone : String
        - emergencyContact : String
        - emergencyPhone : String
        - checkInDate : String
        - bedId : String
        - nursingLevelCode : String
        - roomNo : String
        - status : String
    }

    together {
        class BedDetail <<床位分配>> {
            - detailId : String
            - bedId : String
            - customerId : String
            - assignDate : String
            - releaseDate : String
            - remark : String
        }
        class CheckOut <<退住登记>> {
            - checkoutId : String
            - customerId : String
            - checkoutDate : String
            - reason : String
            - remark : String
        }
    }

    together {
        class OutRegistration <<外出登记>> {
            - outId : String
            - customerId : String
            - outTime : String
            - expectedReturnTime : String
            - actualReturnTime : String
            - companion : String
            - reason : String
            - status : String
        }
        class HealthRecord <<健康记录>> {
            - healthId : String
            - customerId : String
            - recordDate : String
            - bloodPressure : String
            - heartRate : String
            - bloodSugar : String
            - weight : String
            - temperature : String
            - remark : String
        }
        class DietPreference <<膳食偏好>> {
            - preferenceId : String
            - customerId : String
            - preferenceType : String
            - description : String
            - allergies : String
            - taboos : String
            - remark : String
        }
    }
}

' ============ DAO层 ============
package "dao" #F0EDE0 {
    abstract class BaseJsonDao<T> {
        + findAll() : List\<T\>
        + findById(String) : T
        + insert(T) : boolean
        + update / delete / exists
        + load() / save()
    }

    class ElderlyDao {
        + findByName(String) : List\<Elderly\>
        + findByNursingLevel(String) : List\<Elderly\>
        + findByBedId(String) : Elderly
        + findActive() : List\<Elderly\>
    }

    together {
        class BedDetailDao {
            + findByBedId(String) : List\<BedDetail\>
            + findByCustomerId(String) : List\<BedDetail\>
        }
        class CheckOutDao {
            + findByCustomerId(String) : List\<CheckOut\>
        }
    }

    together {
        class OutRegistrationDao {
            + findByCustomerId(String)
            + findByStatus(String)
        }
        class HealthRecordDao {
            + findByCustomerId(String)
            + findByDateRange(String, String)
        }
        class DietPreferenceDao {
            + findByCustomerId(String) : DietPreference
        }
    }
}

' ============ Service层 ============
package "service" #FDF5E6 {
    class ElderlyService {
        - dao : ElderlyDao
        + findAll() / findById()
        + findByName / findByNursingLevel
        + findActive()
        + add / update / delete / exists
    }

    together {
        class BedDetailService {
            - dao : BedDetailDao
            + findAll() / findByBedId()
            + findByCustomerId()
            + add / update / delete
        }
        class CheckOutService {
            - dao : CheckOutDao
            + findAll()
            + findByCustomerId()
            + add / update / delete
        }
    }

    together {
        class OutRegistrationService {
            - dao : OutRegistrationDao
            + findAll()
            + findByCustomerId / findByStatus
            + add / update / delete
        }
        class HealthRecordService {
            - dao : HealthRecordDao
            + findAll()
            + findByCustomerId / findByDateRange
            + add / update / delete
        }
        class DietPreferenceService {
            - dao : DietPreferenceDao
            + findAll()
            + findByCustomerId()
            + add / update / delete
        }
    }
}

' ============ GUI层 ============
package "gui" #F0E8E0 {
    class AdminFrame {
        客户相关Tab:
        - 老人管理 (elderly)
        - 外出手续 (outreg)
        - 退住管理 (checkout)
        - 健康记录 (health)
    }
    class NurseFrame {
        客户相关Tab:
        - 老人信息 (elderly)
        - 膳食偏好 (diet)
    }
}

' === 继承 ===
BaseJsonDao <|-- ElderlyDao
BaseJsonDao <|-- BedDetailDao
BaseJsonDao <|-- CheckOutDao
BaseJsonDao <|-- OutRegistrationDao
BaseJsonDao <|-- HealthRecordDao
BaseJsonDao <|-- DietPreferenceDao

' === Service → DAO ===
ElderlyService --> ElderlyDao
BedDetailService --> BedDetailDao
CheckOutService --> CheckOutDao
OutRegistrationService --> OutRegistrationDao
HealthRecordService --> HealthRecordDao
DietPreferenceService --> DietPreferenceDao

' === 模型关联 (所有都引用customerId → Elderly.id) ===
BedDetail ........> Elderly : customerId
CheckOut .........> Elderly : customerId
OutRegistration ..> Elderly : customerId
HealthRecord .....> Elderly : customerId
DietPreference ...> Elderly : customerId

' === GUI → DAO ===
AdminFrame --> ElderlyDao : 老人管理
AdminFrame --> OutRegistrationDao : 外出登记
AdminFrame --> CheckOutDao : 退住管理
AdminFrame --> HealthRecordDao : 健康记录
NurseFrame --> ElderlyDao : 老人信息
NurseFrame --> DietPreferenceDao : 膳食偏好

note right of Elderly : 客户核心实体\nstatus: "在住" / "已退住"

@enduml
